<!--
    Copyright (C) 2017-2021 comp500

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

    Additional permission under GNU GPL version 3 section 7:
    If you modify this Program, or any covered work, by linking or combining
    it with OpenSSL (or a modified version of that library), containing parts
    covered by the terms of the OpenSSL License, the licensors of this Program
    grant you additional permission to convey the resulting work.
-->

<resources>
    <string name="app_name">SSLSocks</string>
    <string name="app_name_full">SSLSocks TLS/SSL tunnel</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="add_fab">Add</string>

    <!-- Service notification -->
    <string name="notification_desc">Tunnel running</string>
    <string name="notification_channel">Service Notification</string>

    <string-array name="tabs_array">
        <item>HOME</item>
        <item>LOG</item>
        <item>CONFIG</item>
        <item>CERTS/KEYS</item>
        <!--<item>PROFILES</item>
        <item>SETTINGS</item>-->
    </string-array>

    <!-- Main fragment -->
    <string name="run_status_loading">Loading…</string>
    <string name="run_status_not_running">Not running</string>
    <string name="run_status_running">Running</string>
    <string name="run_status_starting">Starting…</string>
    <string name="run_status_stopping">Stopping…</string>

    <!-- Log fragment -->
    <string name="log_blank">stunnel hasn\'t been started yet.</string>

    <!-- Config fragment -->
    <string name="title_activity_config_editor">Config Editor</string>
    <string name="config_editor_saved">Config saved!</string>
    <string-array name="files_array">
        <item>stunnel.conf</item>
        <item>psksecrets.txt</item>
    </string-array>
    <string name="config_editor_hint">Type file contents…</string>

    <!-- Certs/Keys fragment -->
    <string name="import_pem">Import from file</string>
    <string name="no_keys">You haven\'t added any keys or certificates. Press the button below to add one, for server or client verification.</string>
    <string name="title_activity_key_edit">Edit Certificate/Key</string>
    <string name="title_activity_key_create">New Certificate/Key</string>
    <string name="file_contents">File contents</string>
    <string name="file_name">File name</string>
    <string name="file_delete_failed">Failed to delete file</string>
    <string name="file_delete_err">Internal file deletion error</string>
    <string name="file_delete_nexist">File does not exist</string>
    <string name="file_name_required">File name is required</string>
    <string name="file_name_ext">File name must end with .pem or .p12</string>
    <string name="file_name_slashes">File name must not contain forward slashes</string>
    <string name="file_write_fail">Failed to write file</string>
    <string name="file_read_fail">Failed to read file</string>
    <string name="file_save">Save</string>
    <string name="file_delete">Delete</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_advanced_settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_start_on_boot">Start on boot</string>
    <string name="pref_title_open_vpn_profile">OpenVPN Profile</string>
    <string name="pref_desc_open_vpn_profile">Automatically connect to this OpenVPN for Android profile when starting Stunnel</string>

    <string name="pref_header_about">About</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_stunnel_version">Stunnel version</string>
    <string name="pref_desc_stunnel_version_failed">Failed to check version</string>
    <string name="pref_desc_stunnel_version_loading">Loading…</string>

    <string name="pref_header_oss">Open Source Licenses</string>
    <string name="pref_oss_sslsocks_license">GPLv3-or-later (with OpenSSL linking exception)</string>
    <string name="pref_oss_stunnel">Stunnel</string>
    <string name="pref_oss_stunnel_license">GPLv2-or-later (with OpenSSL and LGPL linking exception)</string>

    <!-- Start tunnel shortcut -->
    <string name="start_service_shortcut_short">Tunnel</string>
    <string name="start_service_shortcut_long">Start tunnel</string>
</resources>
