<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="link.infra.sslsocks.gui.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="openSettings"/>
    <item
        android:id="@+id/action_config_editor"
        android:orderInCategory="100"
        android:title="@string/title_activity_config_editor"
        app:showAsAction="never"
        android:onClick="openConfigEditor"/>
    <item
        android:id="@+id/action_import_file"
        android:orderInCategory="100"
        android:title="@string/import_pem"
        app:showAsAction="never"
        android:onClick="importExternalFile"/>
</menu>
